Update backend deployment workflow and enhance server deprovisioning logic
- Upgraded golangci-lint action to version 6 with specific versioning for improved consistency.
- Added deprovisioning functionality in the SSHProvisioner to clean up resources associated with a server, including stopping and disabling the systemd unit and removing installation directories.
- Enhanced error handling and logging during the deprovisioning process to improve traceability.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -39,11 +39,11 @@ jobs:
           cache-dependency-path: apps/backend/go.sum
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: latest
+          version: v1.61.0
           working-directory: apps/backend
-          args: --timeout=5m
+          args: --timeout=5m --concurrency=4
 
   validate-environment:
     needs: lint
