Refactor golangci-lint integration in backend deployment workflow
- Replaced the golangci-lint GitHub Action with a direct installation command for improved control over the linting process.
- Streamlined the linting command execution by running it directly in the backend directory, enhancing clarity and maintainability.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -38,12 +38,11 @@ jobs:
           go-version: "1.24"
           cache-dependency-path: apps/backend/go.sum
 
+      - name: Install golangci-lint
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.61.0
+
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61.0
-          working-directory: apps/backend
-          args: --timeout=5m --concurrency=4
+        run: cd apps/backend && golangci-lint run --timeout=5m --concurrency=4
 
   validate-environment:
     needs: lint
