Remove type checking from golangci-lint configuration to streamline the linting process.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "docker:build": "docker compose -f deploy/docker-compose.yml build",
     "clean": "turbo run clean && rm -rf node_modules",
     "typecheck:frontend": "pnpm --filter @paasdeploy/frontend run typecheck",
-    "lint:go": "cd apps/backend && golangci-lint run ./...",
-    "lint:go-quick": "cd apps/backend && golangci-lint run --fast --timeout=2m ./...",
+    "lint:go": "cd apps/backend && bash scripts/lint-go.sh",
+    "lint:go-quick": "cd apps/backend && (golangci-lint run --fast --timeout=2m ./... 2>/dev/null || ./bin/golangci-lint run --fast --timeout=2m ./...)",
     "precommit:local": "pnpm -w lint-staged && pnpm run lint:go-quick && pnpm run typecheck:frontend"
   },
   "lint-staged": {
