--- a/apps/backend/.golangci.yml
+++ b/apps/backend/.golangci.yml
@@ -1,6 +1,8 @@
 # yaml-language-server: $schema=https://golangci-lint.run/jsonschema/golangci.jsonschema.json
 run:
   timeout: 5m
+  skip-dirs:
+    - internal/di
 
 linters:
   disable-all: true
