Implement agent self-update functionality and enhance backend API
- Added self-update capabilities to the agent, allowing it to download and replace its binary from a specified URL.
- Introduced a new endpoint in the backend API for serving the agent binary download.
- Updated the configuration to include a public API base URL for agent updates.
- Enhanced the gRPC server to enqueue update commands for agents, improving the update process.
- Refactored server handler to support agent update requests, providing a clear response to clients.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -22,6 +22,11 @@ LOG_LEVEL=info
 # Use "*" for development (allows all origins, but disables credentials)
 CORS_ORIGINS=*
 
+# Public base URL of the API (for agent self-update download link)
+# Example: https://api-deploy.connexto.com.br
+# Required for "Update agent" to send download URL to agents
+API_BASE_URL=
+
 # =============================================================================
 # Database
 # =============================================================================
