Enhance Traefik deployment configuration and environment variable handling
- Added support for TRAEFIK_API_URL environment variable in the deployment script, defaulting to "http://traefik:8081" if not set.
- Updated Traefik setup script to enable insecure API access and added a new entry point for Traefik on port 8081.
- Modified deployment workflow to include TRAEFIK_API_URL, improving flexibility in Traefik configuration.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -188,6 +188,7 @@ jobs:
           CLOUDFLARE_SERVER_IP: ${{ vars.CLOUDFLARE_SERVER_IP || '' }}
           API_DOMAIN: ${{ env.API_DOMAIN }}
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
+          TRAEFIK_API_URL: ${{ vars.TRAEFIK_API_URL || 'http://traefik:8081' }}
           GRPC_SERVER_ADDR: ${{ vars.GRPC_SERVER_ADDR || env.GRPC_SERVER_ADDR }}
           LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'contato@connexto.com.br' }}
 
