Refactor focus management in ContainerConsoleDialog for improved terminal interaction
- Updated the `scheduleTerminalFocus` function to accept a reference to the terminal element, enhancing focus handling.
- Modified event handlers to ensure proper focus management on connection and user interactions.
- Improved accessibility by adding `tabIndex` and ensuring focus is correctly set on terminal elements during various events.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -50,20 +50,8 @@ services:
       dockerfile: apps/backend/Dockerfile
     container_name: paasdeploy-backend
     restart: unless-stopped
-    environment:
-      DATABASE_URL: postgres://paasdeploy:paasdeploy@postgres:5432/paasdeploy?sslmode=disable
-      PORT: "8080"
-      HOST: "0.0.0.0"
-      LOG_LEVEL: info
-      DEPLOY_DATA_DIR: /data/apps
-      DEPLOY_WORKERS: "2"
-      DEPLOY_TIMEOUT: "600"
-      HEALTH_CHECK_TIMEOUT: "60"
-      DOCKER_BUILDKIT: "1"
-      GRPC_ENABLED: "true"
-      AGENT_BINARY_PATH: "/app/agent"
-      GRPC_SERVER_ADDR: ${GRPC_SERVER_ADDR:-localhost:50051}
-      AGENT_GRPC_PORT: "50052"
+    env_file:
+      - ../apps/backend/.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - deploy-data:/data/apps
