Update deployment scripts to include AGENT_TLS_INSECURE_SKIP_VERIFY environment variable
- Added support for AGENT_TLS_INSECURE_SKIP_VERIFY in deploy.exp to allow configuration of TLS verification behavior.
- Updated deploy-backend.yml to set AGENT_TLS_INSECURE_SKIP_VERIFY with a default value of 'false' if not provided, enhancing deployment flexibility.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -190,6 +190,7 @@ jobs:
           TRAEFIK_NETWORK: ${{ env.TRAEFIK_NETWORK }}
           TRAEFIK_API_URL: ${{ vars.TRAEFIK_API_URL || 'http://traefik:8081' }}
           GRPC_SERVER_ADDR: ${{ vars.GRPC_SERVER_ADDR || env.GRPC_SERVER_ADDR }}
+          AGENT_TLS_INSECURE_SKIP_VERIFY: ${{ vars.AGENT_TLS_INSECURE_SKIP_VERIFY || 'false' }}
           LETSENCRYPT_EMAIL: ${{ vars.LETSENCRYPT_EMAIL || 'contato@connexto.com.br' }}
 
       - name: Verify deployment
