Update .gitignore and package.json files across the project
- Modified .gitignore to include all .env files while excluding .env.example for better environment management.
- Added "license": "UNLICENSED" to package.json files in the root, backend, and frontend for clarity on project licensing.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@paasdeploy/backend",
   "private": true,
+  "license": "UNLICENSED",
   "version": "0.1.2",
   "scripts": {
     "dev": "air",
