--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@paasdeploy/frontend",
   "private": true,
+  "license": "UNLICENSED",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
