--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -28,9 +28,9 @@ services:
     container_name: paasdeploy-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: paasdeploy
-      POSTGRES_PASSWORD: paasdeploy
-      POSTGRES_DB: paasdeploy
+      POSTGRES_USER: ${POSTGRES_USER:-paasdeploy}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
+      POSTGRES_DB: ${POSTGRES_DB:-paasdeploy}
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ../apps/backend/migrations:/docker-entrypoint-initdb.d:ro
