--- a/deploy/traefik/traefik.yml
+++ b/deploy/traefik/traefik.yml
@@ -29,8 +29,7 @@ certificatesResolvers:
     acme:
       email: "${ACME_EMAIL}"
       storage: /etc/traefik/acme.json
-      httpChallenge:
-        entryPoint: web
+      tlsChallenge: {}
 
 log:
   level: INFO
