Update build process to utilize AGENT_VERSION for versioning
- Introduced AGENT_VERSION variable in Makefile and various build scripts to dynamically set the agent version during the build process.
- Updated Dockerfiles and build commands to read the agent version from AGENT_VERSION, ensuring consistency across builds.
- Modified server_handler.go to reflect the latest agent version as a variable instead of a constant, allowing for easier updates.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -86,7 +86,7 @@
     {
       "label": "Backend: Build",
       "type": "shell",
-      "command": "go build -o bin/api ./cmd/api",
+      "command": "AGENT_VER=$(cat ../../AGENT_VERSION | tr -d '\\n') && go build -ldflags \"-X github.com/paasdeploy/backend/internal/handler.LatestAgentVersion=${AGENT_VER}\" -o bin/api ./cmd/api",
       "options": {
         "cwd": "${workspaceFolder}/apps/backend"
       },
