--- a/apps/agent/Dockerfile
+++ b/apps/agent/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /build
 
 RUN apk add --no-cache git ca-certificates
 
+COPY AGENT_VERSION .
 COPY apps/backend/go.mod apps/backend/go.sum ./backend/
 COPY apps/backend/gen ./backend/gen
 COPY apps/shared/ ./shared/
@@ -12,8 +13,9 @@ COPY apps/agent/ ./agent/
 WORKDIR /build/agent
 
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
-    -ldflags="-w -s" \
+RUN AGENT_VER=$(cat /build/AGENT_VERSION | tr -d '\n') && \
+    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+    -ldflags="-w -s -X github.com/paasdeploy/agent/internal/agent.Version=${AGENT_VER}" \
     -o /build/agent-binary \
     ./cmd/agent
 
