--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "backend:dev": "cd apps/backend && air",
-    "backend:build": "cd apps/backend && go build -o bin/api cmd/api/main.go",
+    "backend:build": "cd apps/backend && AGENT_VER=$(cat ../../AGENT_VERSION | tr -d '\\n') && go build -ldflags \"-X github.com/paasdeploy/backend/internal/handler.LatestAgentVersion=${AGENT_VER}\" -o bin/api cmd/api/main.go",
     "backend:test": "cd apps/backend && go test ./...",
     "docker:up": "docker compose -f deploy/docker-compose.yml up -d",
     "docker:down": "docker compose -f deploy/docker-compose.yml down",
