Update .gitignore to exclude agent binary and backend API files
- Added entries for 'apps/agent/agent-binary' and 'apps/backend/api' to the .gitignore file to prevent these files from being tracked by Git, ensuring a cleaner repository.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ out/
 apps/backend/bin/
 apps/backend/tmp/
 apps/backend/build-errors.log
+apps/agent/agent-binary
+apps/backend/api
 *.exe
 *.exe~
 *.dll
