Add AGENT_VERSION to deployment workflow triggers

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -10,6 +10,7 @@ on:
       - "apps/proto/**"
       - ".github/workflows/deploy-backend.yml"
       - ".github/scripts/**"
+      - "AGENT_VERSION"
   workflow_dispatch:
 
 permissions:
